# trustix

./: .envrc  .gitignore  404.html  HACKING.md  LICENSE  Makefile  Procfile  README.md  README.org  about.html  api.html  bench.py  binarycache.html  config.go  config.toml  default.nix  deps.nix  devshell.toml  extra.go  flake-fetch.nix  flake.nix  go.mod  go.sum  gomod2nix.toml  hacking.html  index.html  intro.html  main.go  messages.go  nixos.html  pkgs.nix  print.html  publishing.html  register.go  register_test.go  renovate.json  searchindex.js  searchindex.json  server.go  shell.nix  (+6 more)
contrib/ui-dashboard/: .flake8  Makefile  Procfile  aerich.ini  check  default.nix  pyproject.toml  shell.nix
contrib/ui-dashboard/api/: api_pb2.py
contrib/ui-dashboard/dev/: mkproto.py
contrib/ui-dashboard/frontend/: package-lock.json  package.json  rollup.config.js  shell.nix
contrib/ui-dashboard/frontend/src/: App.svelte  main.js
contrib/ui-dashboard/migrations/trustix_dash/: 0_20210318124225_init.sql
contrib/ui-dashboard/node-deps/: package-lock.json  package.json  shell.nix
contrib/ui-dashboard/pynix/: pyproject.toml  shell.nix
contrib/ui-dashboard/schema/: logleaf_pb2.py  queue_pb2.py  sth_pb2.py
contrib/ui-dashboard/tools/: app  check  createdb  format  migrate  postgresql
contrib/ui-dashboard/tools/lib/: __init__.py
contrib/ui-dashboard/trustix_api/: api_pb2.py  api_pb2_grpc.py
contrib/ui-dashboard/trustix_dash/: __init__.py  __main__.py  api.py  app.py  conf.py  proto.py  template_lib.py
contrib/ui-dashboard/trustix_dash/api/: __init__.py  attr.py  derivation.py  models.py  output.py  search.py
contrib/ui-dashboard/trustix_dash/cli/: __init__.py  __main__.py
contrib/ui-dashboard/trustix_dash/js/: Procfile  build.js  default.nix  package-lock.json  package.json  rollup.config.js  shell.nix  src.nix  tsconfig.json
contrib/ui-dashboard/trustix_dash/js/src/: attr-chart-render.js  main.ts  (+7 more)
contrib/ui-dashboard/trustix_dash/lib/: __init__.py
contrib/ui-dashboard/trustix_dash/models/: __init__.py  derivation.py  evaluation.py  fields.py  meta.py  result.py
contrib/ui-dashboard/trustix_dash/static/: style.css  suggestions.js  tooltips.js
contrib/ui-dashboard/trustix_dash/templates/: attr-chart-render.js  attr.jinja2  base.jinja2  drv-pie-render.js  drv.jinja2  header.jinja2  index.jinja2  search.jinja2
contrib/ui-dashboard/trustix_proto/: trustix_pb2.py  trustix_pb2_grpc.py
contrib/ui-dashboard/trustix_schema/: logleaf_pb2.py  mapentry_pb2.py  queue_pb2.py
pytree/: .gitignore  README.md  default.nix  pyproject.toml  shell.nix  verify.py
pytree/trustix/: __main__.py  lib.py  repo.py
ui/: Makefile  manage.py  overrides.nix  pyproject.toml  setup.cfg  shell.nix
ui/api/: api_pb2.py  api_pb2_grpc.py
ui/dash_main/: admin.py  api.py  models.py  util.py
ui/dash_main/management/commands/: check_reprod.py  index_eval.py  index_eval_outputs.py  index_logs.py
ui/dash_main/migrations/: 0001_initial.py
ui/proto/: trustix_pb2.py  trustix_pb2_grpc.py
ui/pynix/: README.md  pynix.py  shell.nix
ui/pynix/tests/: __main__.py
ui/pynix/tests/fixtures/: 16ylnr0arqsv2lkr97wmd5plilpcz477-firefox-83.0.drv  g5i6zxprb04r16mm52v141h82835cpsd-jq-1.6.drv  s6rn4jz1sin56rf4qj5b5v8jxjm32hlk-hello-2.10.drv
ui/schema/: logleaf_pb2.py  mapentry_pb2.py  sth_pb2.py
ui/trustix_dash/: __init__.py  __main__.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
ui/trustix_dash/hydra_eval/: attrs.nix  outpaths.nix
ui/trustix_dash/models/: log.py
ui/trustix_dash/templates/: index.html
(+233 files in other folders)
