[tool.poetry]
name = "trustix"
version = "0.1.0"
description = "Trustix git implementation"
authors = ["adisbladis <adam.hose@tweag.io>"]
license = "LGPL"

[tool.poetry.dependencies]
python = "^3.8"
pygit2 = "^1.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
