[tool.poetry]
name = "pynix"
version = "0.1.0"
description = "Utility functions for working with Nix in Python"
authors = ["adisbladis <adam.hose@tweag.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
